@@ -1,5 +1,11 @@
 2007-10-25  David Gilbert  <david.gilbert@object-refinery.com>
 
+	* source/org/jfree/chart/renderer/xy/XYSplineAndShapeRenderer.java
+	(drawPrimaryLineAsPath): Check for duplicated control points,
+	(ControlPoint.equals): New method override.
+
+2007-10-25  David Gilbert  <david.gilbert@object-refinery.com>
+
 	* source/org/jfree/chart/plot/CategoryPlot.java
 	(getDomainAxisIndex): Added argument check,
 	(getRangeAxisIndex): Likewise.
